# GoBirdie-Desktop

./: .gitignore  README.ko.md  README.md  RELEASE_NOTES.md  build.bat  build.sh  bundle_dylibs.sh  clean.sh  delete-store.sh  dev.sh  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: gobirdie_patterns.onnx  schema.json
src-tauri/resources/gobirdie-bllossom-4bit/: config.json  model.safetensors.index.json  tokenizer_config.json
src-tauri/resources/gobirdie-coach-4bit/: README.md  config.json
src-tauri/src/: android_sync.rs  apple_sync.rs  inference.rs  main.rs  mobile_sync.rs  models.rs  mtp.rs  parser.rs  prompt_builder.rs  slm.rs  store.rs
src-tauri/src/native/: Package.swift  garmin_mtp  garmin_mtp-aarch64-apple-darwin  garmin_mtp.c  garmin_mtp_windows.cpp  gobirdie-sync-helper-aarch64-apple-darwin
src-tauri/src/native/Sources/: Info.plist  main.swift
web/: index.html
web/css/: main.css
web/js/: app.js  coaching-panel.js  i18n.js  nlg-engine.js  nlg-templates.js
